@@ -24,6 +24,6 @@ extern char *optarg;
 extern int getopt(int nargc, char *const *nargv, const char *ostr);
 extern int getopt_long(int argc, char * const argv[], const char *optstring,
 			const struct option *longopts, int totlen);
-
+extern void reset_options_reading();
 
 #endif				/* _GETOPT_H_ */
